test_src/compiler_errors/control_flow/ReturnError2.b
class ReturnError2 {
    Int test() {
        return;
    }
}
